--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,6 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- Результат -->
     <TextView
         android:id="@+id/tvResult"
         android:layout_width="match_parent"
@@ -17,36 +19,37 @@
         android:text="0"
         android:textColor="@color/black"
         android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.024" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
+
+
+    <!-- Ряд 3: 1 2 3 -->
     <Button
         android:id="@+id/btn1"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_margin="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="8dp"
         android:text="1"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn2"/>
-
+        app:layout_constraintTop_toBottomOf="@id/btn4"
+        android:layout_margin="8dp"/>
     <Button
         android:id="@+id/btn2"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_margin="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
         android:text="2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btn1" />
-
+        app:layout_constraintStart_toEndOf="@id/btn1"
+        app:layout_constraintTop_toBottomOf="@id/btn5"
+        android:layout_margin="8dp"/>
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:text="3"
+        app:layout_constraintStart_toEndOf="@id/btn2"
+        app:layout_constraintTop_toBottomOf="@id/btn6"
+        android:layout_margin="8dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
