--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,14 @@
         app:layout_constraintStart_toEndOf="@id/btn2"
         app:layout_constraintTop_toBottomOf="@id/btn6"
         android:layout_margin="8dp"/>
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:text="4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn7"
+        android:layout_margin="8dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
