--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,5 +85,14 @@
         app:layout_constraintTop_toBottomOf="@id/tvResult"
         android:layout_margin="8dp"/>
 
+    <Button
+        android:id="@+id/btn8"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:text="8"
+        app:layout_constraintStart_toEndOf="@id/btn7"
+        app:layout_constraintTop_toBottomOf="@id/tvResult"
+        android:layout_margin="8dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
