--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,5 +103,14 @@
         app:layout_constraintTop_toBottomOf="@id/tvResult"
         android:layout_margin="8dp"/>
 
+    <Button
+        android:id="@+id/btn0"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:text="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn1"
+        android:layout_margin="8dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
